force-app/main/default/objects/cgcloud__Promotion_Sales_Folder__c/cgcloud__Promotion_Sales_Folder__c.object-meta.xml
<CustomObject>
    <description>Junction object between Promotion and Sales Folder.</description>
    <label>Promotion Sales Folder</label>
    <nameField>
        <displayFormat>PSF-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Sales Folders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>