force-app/main/default/objects/cgcloud__Promotion_Sales_Folder__c/fields/cgcloud__Promotion_Anchor__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Anchor__c</fullName>
    <description>Displays the anchor used in the promotion.</description>
    <formula>IF(ISPICKVAL(cgcloud__Promotion__r.cgcloud__Promotion_Template__r.cgcloud__Anchor_Type__c,&apos;Customer&apos;),cgcloud__Promotion__r.cgcloud__Anchor_Account__r.Name,IF(ISPICKVAL(cgcloud__Promotion__r.cgcloud__Promotion_Template__r.cgcloud__Anchor_Type__c, &apos;CustomerSet&apos;), cgcloud__Promotion__r.cgcloud__Anchor_Account_Set__r.cgcloud__Description__c, &apos;&apos;))</formula>
    <label>Promotion Anchor</label>
    <type>Text</type>
</CustomField>