force-app/main/default/objects/cgcloud__Promotion_Sales_Folder__c/fields/cgcloud__Promotion_Date_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Date_From__c</fullName>
    <description>References to the promotion date from.</description>
    <formula>cgcloud__Promotion__r.cgcloud__Date_From__c</formula>
    <label>Promotion Date From</label>
    <type>Date</type>
</CustomField>