force-app/main/default/objects/cgcloud__Promotion_Sales_Folder__c/fields/cgcloud__Promotion_Date_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Date_Thru__c</fullName>
    <description>References to the promotion date thru.</description>
    <formula>cgcloud__Promotion__r.cgcloud__Date_Thru__c</formula>
    <label>Promotion Date Thru</label>
    <type>Date</type>
</CustomField>