force-app/main/default/objects/cgcloud__Promotion_Sales_Folder__c/fields/cgcloud__Promotion_Slogan__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Slogan__c</fullName>
    <description>References to the promotion slogan.</description>
    <formula>HYPERLINK(&apos;/&apos; &amp; cgcloud__Promotion__c, cgcloud__Promotion__r.cgcloud__Slogan__c, &apos;_top&apos;)</formula>
    <label>Promotion Slogan</label>
    <type>Text</type>
</CustomField>