force-app/main/default/objects/cgcloud__Promotion_Sales_Folder__c/fields/cgcloud__Promotion_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Template__c</fullName>
    <description>References to the promotion template.</description>
    <formula>HYPERLINK(&apos;/&apos; &amp; cgcloud__Promotion__r.cgcloud__Promotion_Template__c, cgcloud__Promotion__r.cgcloud__Promotion_Template__r.Name, &apos;_top&apos;)</formula>
    <label>Promotion Template</label>
    <type>Text</type>
</CustomField>