force-app/main/default/objects/cgcloud__Promotion_Sales_Folder__c/fields/cgcloud__Sales_Folder__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Folder__c</fullName>
    <description>Reference to the sales folder.</description>
    <label>Sales Folder</label>
    <referenceTo>cgcloud__Sales_Folder__c</referenceTo>
    <relationshipLabel>Promotions</relationshipLabel>
    <relationshipName>Promotions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>