force-app/main/default/objects/cgcloud__Promotion_Sales_Folder__c/fields/cgcloud__Sales_Folder_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Folder_Description__c</fullName>
    <description>References to the sales folder description.</description>
    <formula>cgcloud__Sales_Folder__r.cgcloud__Description__c</formula>
    <label>Sales Folder Description</label>
    <type>Text</type>
</CustomField>