force-app/main/default/objects/cgcloud__Promotion_Sales_Folder__c/fields/cgcloud__Sales_Folder_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Folder_Valid_From__c</fullName>
    <description>References to the sales folder valid from.</description>
    <formula>cgcloud__Sales_Folder__r.cgcloud__Valid_From__c</formula>
    <label>Sales Folder Valid From</label>
    <type>Date</type>
</CustomField>