force-app/main/default/objects/cgcloud__Promotion_Sales_Folder__c/fields/cgcloud__Sales_Folder_Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Folder_Valid_Thru__c</fullName>
    <description>References to the sales folder valid thru.</description>
    <formula>cgcloud__Sales_Folder__r.cgcloud__Valid_Thru__c</formula>
    <label>Sales Folder Valid Thru</label>
    <type>Date</type>
</CustomField>