force-app/main/default/objects/cgcloud__Promotion_Sales_Folder__c/validationRules/cgcloud__Check_Promotion_Relevant.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_Promotion_Relevant</fullName>
    <active>true</active>
    <description>Only sales folders with &apos;Promotion Relevant&apos; Sales Folder Template can be selected.</description>
    <errorConditionFormula>NOT(cgcloud__Sales_Folder__r.cgcloud__Sales_Folder_Template__r.cgcloud__Promotion_Relevant__c)</errorConditionFormula>
    <errorMessage>Only sales folders with &apos;Promotion Relevant&apos; Sales Folder Template can be selected.</errorMessage>
</ValidationRule>