force-app/main/default/objects/cgcloud__Promotion_Sales_Folder__c/validationRules/cgcloud__Check_Sales_Folder_Promotion_Sales_Org.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_Sales_Folder_Promotion_Sales_Org</fullName>
    <active>true</active>
    <description>The Sales Folder and the Promotion must have the same Sales Org.</description>
    <errorConditionFormula>TEXT(cgcloud__Sales_Folder__r.cgcloud__Sales_Org__c)!= cgcloud__Promotion__r.cgcloud__Sales_Org__c</errorConditionFormula>
    <errorMessage>The Sales Folder and the Promotion must have the same Sales Org.</errorMessage>
</ValidationRule>